Implementacion de la fase de modo invitado
